--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
 	"devDependencies": {
 		"@eslint/compat": "1.4.0",
 		"@eslint/js": "9.36.0",
+		"@iconify-json/fluent": "^1.2.31",
 		"@iconify-json/fluent-emoji": "^1.2.6",
+		"@iconify-json/simple-icons": "^1.2.53",
 		"@sveltejs/adapter-auto": "^6.1.0",
 		"@sveltejs/adapter-vercel": "^5.10.2",
-		"@sveltejs/kit": "2.43.2",
-		"@sveltejs/vite-plugin-svelte": "6.2.0",
+		"@sveltejs/kit": "2.43.4",
+		"@sveltejs/vite-plugin-svelte": "6.2.1",
 		"@tailwindcss/vite": "4.1.13",
 		"@types/leaflet": "^1.9.20",
 		"@vite-pwa/sveltekit": "1.0.0",
-		"daisyui": "5.1.14",
+		"daisyui": "5.1.18",
 		"eslint": "9.36.0",
 		"eslint-config-prettier": "10.1.8",
 		"eslint-plugin-svelte": "3.12.4",
@@ -32,7 +34,7 @@
 		"prettier": "3.6.2",
 		"prettier-plugin-svelte": "3.4.0",
 		"prettier-plugin-tailwindcss": "0.6.14",
-		"svelte": "5.39.5",
+		"svelte": "5.39.6",
 		"svelte-adapter-bun": "1.0.0",
 		"svelte-check": "4.3.2",
 		"svelte-cookie-consent": "2.3.1",
