--- a/package.json
+++ b/package.json
@@ -14,43 +14,37 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
-		"@eslint/compat": "1.4.0",
-		"@eslint/js": "9.37.0",
-		"@iconify-json/fluent": "^1.2.32",
-		"@iconify-json/fluent-emoji": "^1.2.6",
-		"@iconify-json/simple-icons": "^1.2.54",
-		"@sveltejs/kit": "2.46.4",
+		"@eslint/compat": "2.0.0",
+		"@eslint/js": "9.39.1",
+		"@iconify-json/fluent": "1.2.34",
+		"@iconify-json/fluent-emoji": "1.2.7",
+		"@iconify-json/simple-icons": "1.2.59",
+		"@sveltejs/kit": "2.48.5",
 		"@sveltejs/vite-plugin-svelte": "6.2.1",
-		"@tailwindcss/vite": "4.1.14",
-		"@types/bun": "^1.2.23",
-		"@types/leaflet": "^1.9.20",
-		"@vite-pwa/sveltekit": "1.0.0",
-		"daisyui": "5.1.29",
-		"eslint": "9.37.0",
+		"@tailwindcss/vite": "4.1.17",
+		"@types/bun": "1.3.2",
+		"@vite-pwa/sveltekit": "1.0.1",
+		"daisyui": "5.5.5",
+		"eslint": "9.39.1",
 		"eslint-config-prettier": "10.1.8",
-		"eslint-plugin-svelte": "3.12.4",
-		"globals": "16.4.0",
+		"eslint-plugin-svelte": "3.13.0",
+		"globals": "16.5.0",
 		"prettier": "3.6.2",
 		"prettier-plugin-svelte": "3.4.0",
-		"prettier-plugin-tailwindcss": "0.6.14",
-		"svelte": "5.39.11",
-		"svelte-adapter-bun": "^1.0.0",
-		"svelte-check": "4.3.3",
+		"prettier-plugin-tailwindcss": "0.7.1",
+		"svelte": "5.43.10",
+		"@sveltejs/adapter-vercel": "6.1.1",
+		"svelte-check": "4.3.4",
 		"svelte-cookie-consent": "2.3.1",
-		"tailwindcss": "4.1.14",
+		"tailwindcss": "4.1.17",
 		"typescript": "5.9.3",
-		"typescript-eslint": "8.46.0",
-		"unplugin-icons": "22.4.2",
-		"vite": "7.1.9"
-	},
-	"dependencies": {
+		"typescript-eslint": "8.47.0",
+		"unplugin-icons": "22.5.0",
+		"vite": "7.2.2",
 		"@boxfish-studio/sveltekit-cookie-manager": "1.0.3",
-		"@iconify/svelte": "5.0.2",
-		"dom-to-image": "^2.6.0",
-		"html2canvas": "^1.4.1",
-		"jsdom": "^27.0.0",
-		"postgres": "^3.4.7",
-		"sveltekit-superforms": "2.27.2",
+		"@iconify/svelte": "5.1.0",
+		"postgres": "3.4.7",
+		"sveltekit-superforms": "2.28.1",
 		"valibot": "1.1.0"
 	}
 }
