--- a/package.json
+++ b/package.json
@@ -14,37 +14,39 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
+		"@boxfish-studio/sveltekit-cookie-manager": "1.0.3",
 		"@eslint/compat": "2.0.0",
 		"@eslint/js": "9.39.1",
 		"@iconify-json/fluent": "1.2.34",
 		"@iconify-json/fluent-emoji": "1.2.7",
 		"@iconify-json/simple-icons": "1.2.59",
+		"@iconify/svelte": "5.1.0",
+		"@sveltejs/adapter-vercel": "6.1.1",
 		"@sveltejs/kit": "2.48.5",
 		"@sveltejs/vite-plugin-svelte": "6.2.1",
 		"@tailwindcss/vite": "4.1.17",
 		"@types/bun": "1.3.2",
 		"@vite-pwa/sveltekit": "1.0.1",
 		"daisyui": "5.5.5",
+		"drizzle-kit": "0.31.7",
+		"drizzle-orm": "0.44.7",
 		"eslint": "9.39.1",
 		"eslint-config-prettier": "10.1.8",
 		"eslint-plugin-svelte": "3.13.0",
 		"globals": "16.5.0",
+		"postgres": "3.4.7",
 		"prettier": "3.6.2",
 		"prettier-plugin-svelte": "3.4.0",
 		"prettier-plugin-tailwindcss": "0.7.1",
 		"svelte": "5.43.10",
-		"@sveltejs/adapter-vercel": "6.1.1",
 		"svelte-check": "4.3.4",
 		"svelte-cookie-consent": "2.3.1",
+		"sveltekit-superforms": "2.28.1",
 		"tailwindcss": "4.1.17",
 		"typescript": "5.9.3",
 		"typescript-eslint": "8.47.0",
 		"unplugin-icons": "22.5.0",
-		"vite": "7.2.2",
-		"@boxfish-studio/sveltekit-cookie-manager": "1.0.3",
-		"@iconify/svelte": "5.1.0",
-		"postgres": "3.4.7",
-		"sveltekit-superforms": "2.28.1",
-		"valibot": "1.1.0"
+		"valibot": "1.1.0",
+		"vite": "7.2.2"
 	}
 }
