--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
 		"@boxfish-studio/sveltekit-cookie-manager": "1.0.3",
 		"@eslint/compat": "2.0.0",
 		"@eslint/js": "9.39.1",
-		"@iconify-json/fluent": "1.2.34",
+		"@iconify-json/fluent": "1.2.35",
 		"@iconify-json/fluent-emoji": "1.2.7",
-		"@iconify-json/simple-icons": "1.2.59",
+		"@iconify-json/simple-icons": "1.2.60",
 		"@iconify/svelte": "5.1.0",
-		"@sveltejs/adapter-vercel": "6.1.1",
-		"@sveltejs/kit": "2.48.5",
+		"@sveltejs/adapter-vercel": "6.1.2",
+		"@sveltejs/kit": "2.49.0",
 		"@sveltejs/vite-plugin-svelte": "6.2.1",
 		"@tailwindcss/vite": "4.1.17",
-		"@types/bun": "1.3.2",
+		"@types/bun": "1.3.3",
 		"@vite-pwa/sveltekit": "1.0.1",
 		"daisyui": "5.5.5",
 		"drizzle-kit": "0.31.7",
@@ -38,7 +38,7 @@
 		"prettier": "3.6.2",
 		"prettier-plugin-svelte": "3.4.0",
 		"prettier-plugin-tailwindcss": "0.7.1",
-		"svelte": "5.43.10",
+		"svelte": "5.43.14",
 		"svelte-check": "4.3.4",
 		"svelte-cookie-consent": "2.3.1",
 		"sveltekit-superforms": "2.28.1",
@@ -47,6 +47,14 @@
 		"typescript-eslint": "8.47.0",
 		"unplugin-icons": "22.5.0",
 		"valibot": "1.1.0",
-		"vite": "7.2.2"
+		"@oslojs/oauth2": "0.5.0",
+		"sharp": "0.34.5",
+		"@aws-sdk/client-s3": "3.937.0",
+		"@aws-sdk/s3-request-presigner": "3.937.0",
+		"arctic": "3.7.0",
+		"@valibot/i18n": "1.0.0",
+		"@tailwindcss/forms": "0.5.10",
+		"@tailwindcss/typography": "0.5.19",
+		"vite": "7.2.4"
 	}
 }
