--- a/package.json
+++ b/package.json
@@ -14,20 +14,30 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
+		"@aws-sdk/client-s3": "3.940.0",
+		"@aws-sdk/s3-request-presigner": "3.940.0",
 		"@boxfish-studio/sveltekit-cookie-manager": "1.0.3",
 		"@eslint/compat": "2.0.0",
 		"@eslint/js": "9.39.1",
 		"@iconify-json/fluent": "1.2.35",
 		"@iconify-json/fluent-emoji": "1.2.7",
-		"@iconify-json/simple-icons": "1.2.60",
+		"@iconify-json/fluent-emoji-flat": "^1.2.5",
+		"@iconify-json/logos": "^1.2.10",
+		"@iconify-json/simple-icons": "1.2.61",
 		"@iconify/svelte": "5.1.0",
-		"@sveltejs/adapter-vercel": "6.1.2",
+		"@oslojs/oauth2": "0.5.0",
+		"@sveltejs/adapter-vercel": "6.2.0",
 		"@sveltejs/kit": "2.49.0",
 		"@sveltejs/vite-plugin-svelte": "6.2.1",
+		"@tailwindcss/forms": "0.5.10",
+		"@tailwindcss/typography": "0.5.19",
 		"@tailwindcss/vite": "4.1.17",
 		"@types/bun": "1.3.3",
-		"@vite-pwa/sveltekit": "1.0.1",
+		"@valibot/i18n": "1.0.0",
+		"@vite-pwa/sveltekit": "1.1.0",
+		"arctic": "3.7.0",
 		"daisyui": "5.5.5",
+		"dotenv": "^17.2.3",
 		"drizzle-kit": "0.31.7",
 		"drizzle-orm": "0.44.7",
 		"eslint": "9.39.1",
@@ -35,26 +45,19 @@
 		"eslint-plugin-svelte": "3.13.0",
 		"globals": "16.5.0",
 		"postgres": "3.4.7",
-		"prettier": "3.6.2",
+		"prettier": "3.7.3",
 		"prettier-plugin-svelte": "3.4.0",
 		"prettier-plugin-tailwindcss": "0.7.1",
-		"svelte": "5.43.14",
+		"sharp": "0.34.5",
+		"svelte": "5.45.2",
 		"svelte-check": "4.3.4",
 		"svelte-cookie-consent": "2.3.1",
 		"sveltekit-superforms": "2.28.1",
 		"tailwindcss": "4.1.17",
 		"typescript": "5.9.3",
-		"typescript-eslint": "8.47.0",
+		"typescript-eslint": "8.48.0",
 		"unplugin-icons": "22.5.0",
-		"valibot": "1.1.0",
-		"@oslojs/oauth2": "0.5.0",
-		"sharp": "0.34.5",
-		"@aws-sdk/client-s3": "3.937.0",
-		"@aws-sdk/s3-request-presigner": "3.937.0",
-		"arctic": "3.7.0",
-		"@valibot/i18n": "1.0.0",
-		"@tailwindcss/forms": "0.5.10",
-		"@tailwindcss/typography": "0.5.19",
-		"vite": "7.2.4"
+		"valibot": "1.2.0",
+		"vite": "7.2.6"
 	}
 }
