--- a/static/manifest.json
+++ b/static/manifest.json
@@ -21,5 +21,14 @@
 	"lang": "en",
 	"name": "NewsMix Sources",
 	"short_name": "NM Sources",
-	"description": "Search Telegram news channels"
+	"description": "Search Telegram news channels",
+	"share_target": {
+		"action": "/share-message",
+		"method": "GET",
+		"params": {
+			"title": "title",
+			"text": "text",
+			"url": "url"
+		}
+	}
 }
